test/mutation_analysis/s0925_long_pressed_name/hafis/ablation_o3_full/mutants/11/result.txt
./test/mutation_analysis/s0925_long_pressed_name/hafis/ablation_o3_full/mutants/11/Solution.java:18: error: unreachable statement
        while (false) {
                      ^
1 error
